# inertia-flask

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: build.yml
demo/: app.py
demo-ssr/: app.py
demo-ssr/react/: package.json  server.js  vite.config.ts
demo-ssr/react/src/: App.tsx  main.tsx  ssr.tsx
demo-ssr/static/client/: main.js
demo-ssr/templates/: base.html
demo/react/: package.json  pnpm-lock.yaml  vite.config.ts
demo/react/src/: main.tsx
demo/react/src/Pages/: component.tsx
demo/templates/: base.html  test.html
examples/blueprint/: app.py  my_blueprint.py
examples/blueprint/blueprints/: my_blueprint.py
examples/react/: app.py
examples/react-ssr/: app.py
inertia_flask/: __init__.py  cli.py  csrf.py  extension.py  helpers.py  http.py  inertia.py  middleware.py  prop_classes.py  responses.py  settings.py  utils.py  version.py  views.py
inertia_flask/templates/: inertia.html
instance/: demo.db
tests/: __init__.py  _test_inertia.py  conftest.py  test_blueprint.py  test_cli.py  test_defer.py  test_group.py  test_history.py  test_inertia.py  test_inertia2.py  test_merge.py  test_page.py  test_render.py
tests/testapp/: app.py
tests/testapp/blueprint/: app.py  bp.py
tests/testapp/templates/: base.html
