[tool.poetry]
name = "inertia-flask"
version = "0.0.1"
description = "Inertia Flask Demo"
authors = ["Coulton Fraser <cjrfraser@gmail.com>"]
readme = "README.md"
packages = [{include = "inertia_flask"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
markupsafe = "^3.0.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
pydantic = "^2.10.6"
ruff = "^0.9.6"
flask-seasurf = "^2.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
beautifulsoup4 = "^4.13.3"
pytest = "^8.3.4"

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "-v"

[tool.poetry.scripts]
demo = "demo.app:main"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint.'MESSAGES CONTROL']
disable = ["missing-docstring"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"